<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="7dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/conteneur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:textColorHint="@color/AliceBlue">

                <EditText
                    android:id="@+id/nomvictime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/etxt_text"
                    android:layout_centerHorizontal="true"
                    android:hint="@string/nomvictime"
                    android:inputType="textAutoCorrect|textCapWords"
                    android:textColorHighlight="@color/CadetBlue"
                    android:textColorHint="@color/CadetBlue"
                    android:textColorLink="@color/CadetBlue"
                    android:textCursorDrawable="@color/CadetBlue" />


            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/TA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layoutDirection="inherit"
            android:longClickable="true"
            android:measureWithLargestChild="false"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.33"
                android:background="@drawable/customblueshape"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/tension_art_rielle"
                android:textAllCaps="true"
                android:typeface="normal" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/AliceBlue">

                <EditText
                    android:id="@+id/diastole"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/etxt_diastole"
                    android:layout_centerHorizontal="false"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="#6E6A6A"
                    android:hint="@string/diastole"
                    android:inputType="number"
                    android:textColor="@color/AliceBlue"
                    android:textColorHint="@color/AliceBlue"
                    android:textCursorDrawable="@drawable/color_cursor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/AliceBlue">

                <EditText
                    android:id="@+id/systole"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/etxt_systole"
                    android:layout_centerHorizontal="false"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="0.5"
                    android:background="#FF6E6A6A"
                    android:hint="@string/systole"
                    android:inputType="number"
                    android:textColor="@color/AliceBlue"
                    android:textColorHighlight="@color/Azure"
                    android:textColorHint="@color/AliceBlue"
                    android:textColorLink="@color/Azure"
                    android:textCursorDrawable="@drawable/color_cursor" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/POULS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.33"
                android:background="@drawable/customblueshape"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/lepouls"
                android:textAllCaps="true" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/AliceBlue">

                <EditText
                    android:id="@+id/poulsradial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/etxt_diastole"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="#FF6E6A6A"
                    android:hint="@string/sur_1_minute"
                    android:inputType="number"
                    android:textColor="@color/AliceBlue"
                    android:textColorHint="@color/AliceBlue"
                    android:textColorLink="@color/AliceBlue"
                    android:textCursorDrawable="@drawable/color_cursor" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/glycemie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.33"
                android:background="@drawable/customblueshape"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/glycemie"
                android:textAllCaps="true" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/AliceBlue">

                <EditText
                    android:id="@+id/laglycemie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/etxt_diastole"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="#FF6E6A6A"
                    android:hint="@string/glyc_mie"
                    android:inputType="number|numberDecimal"
                    android:textColor="@color/AliceBlue"
                    android:textColorHint="@color/AliceBlue"
                    android:textColorLink="@color/AliceBlue"
                    android:textCursorDrawable="@drawable/color_cursor" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/TEMP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.33"
                android:background="@drawable/customblueshape"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/temp_rature"
                android:textAllCaps="true" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/AliceBlue">

                <EditText
                    android:id="@+id/temperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/etxt_diastole"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="#FF6E6A6A"
                    android:hint="@string/relev_de_temp_rature"
                    android:inputType="numberDecimal"
                    android:textColor="@color/AliceBlue"
                    android:textColorHint="@color/AliceBlue"
                    android:textColorLink="@color/AliceBlue"
                    android:textCursorDrawable="@drawable/color_cursor" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/FRERES"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.33"
                android:background="@drawable/customblueshape"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/fr_quence_respiratoire"
                android:textAllCaps="true" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/AliceBlue">

                <EditText
                    android:id="@+id/respi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/etxt_diastole"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="#FF6E6A6A"
                    android:hint="@string/sur_1_minute"
                    android:inputType="number"
                    android:textColor="@color/AliceBlue"
                    android:textColorHint="@color/WhiteSmoke"
                    android:textColorLink="@color/AliceBlue"
                    android:textCursorDrawable="@drawable/color_cursor" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/THEBUTTON"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Button
                android:id="@+id/gotostore"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/DarkGray"
                android:text="@string/sauvegarder"
                android:textColor="@color/white"
                app:icon="@drawable/ambulance"
                app:iconTint="@color/Crimson" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>


