...
    <string name="menu_gallery">Inventaire VSAV</string>
    <string name="menu_slideshow">Bilans secondaires</string>
    <string name="enregistrement_d_un_utilisateur">Enregistrement d\'un utilisateur</string>
    <string name="name">Nom</string>
    <string name="pr_nom">Prénom</string>
    <string name="centre">Centre</string>
    <string name="grade">Grade</string>
    <string name="user">%1$ %2$</string>
    <string name="planning">Planning des gardes</string>
    <string name="enregistrer_les_constantes">Bilan secondaire</string>
    <string name="nomvictime">Nom et prénom</string>
    <string name="tension_art_rielle">TA</string>
    <string name="diastole">Diastole</string>
...
